fix PropertiesUtil classes
- fix NotePropertiesUtil
- fix DiscardedElementPropertiesUtil
- test code used by PropUtils.writeNote
- test code used by PropUtils.writeDiscardedElement
- tests passed